<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HHB App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash">fragment_splash</string>
    <string name="main_page">Main Page</string>
    <string name="main_menu">Main Menu</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_account">Account does not exist</string>
    <string name="action_debit">\nDebit Account\n</string>
    <string name="action_credit">\nCredit Account\n</string>
    <string name="accounts">Accounts</string>
    <string name="actions">Actions</string>
    <string name="prompt_account">Account Number</string>
    <string name="show_balance">\nShow Balance\n</string>
    <string name="account_summary">\nAccount Summary\n</string>
    <string name="transfer_funds">\nTransfer Funds\n</string>
    <string name="close_account">\nClose Account\n</string>
    <string name="logout_account">\nLog Out\n</string>
    <string name="confirm_close">\nConfirm\n</string>
    <string name="penalty_interest">\nCalculate Penalty\nor Interest\n</string>
    <string name="current_account">Current Account</string>
    <string name="return_to_prev">Back</string>
    <string name="duplicate_acct_number">Account Number has already been registered</string>
    <string name="incorrect_number_format">Account Number must be 6 digits long</string>
    <string name="duplicate_username">Username has already been taken</string>
    <string name="duplicate_email">Email has already been registered</string>
    <string name="user_account">User Account</string>
    <string name="transactions">Transaction Log</string>

    <string-array name="accounts_array">
        <item>Saving</item>
        <item>Checking</item>
    </string-array>

    <!-- temporary array to hardcode account numbers -->
    <string-array name="account_numbers_array">
        <item>1234567890</item>
    </string-array>

</resources>
