<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/close_account"
        android:id="@+id/close_label"
        android:layout_gravity="center_horizontal" />
    <EditText
        android:id="@+id/account_number_close"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_account"
        android:imeOptions="actionUnspecified"
        android:inputType="numberSigned"
        android:maxLines="1"
        android:singleLine="true"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_close"
        android:id="@+id/action_confirm"
        android:layout_gravity="center_horizontal" />



</LinearLayout>